--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
             integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
             crossorigin="anonymous"
     />
+<!--    <link-->
+<!--            rel="stylesheet"-->
+<!--            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"-->
+<!--            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"-->
+<!--            crossorigin="anonymous"-->
+<!--    />-->
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
